Update schema of word database and all related classes